# Troll-Football-OOP-Project

./: README.md
TrollFootball/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
TrollFootball/include/core/: Game.h  GameObject.h
TrollFootball/include/entities/: Ball.h  Player.h
TrollFootball/src/: main.cpp
TrollFootball/src/core/: Game.cpp
TrollFootball/src/entities/: Ball.cpp  Player.cpp
